--- a/partials/header.html
+++ b/partials/header.html
@@ -1,6 +1,6 @@
 <div class="logo">
     <img src="../img/Mellow.png" alt="Mellow Yeller Logo"/>
-    <a href="../index.html">Mellow Yeller</a>
+    <a href="../index.html"><h1>Mellow Yeller</h1></a>
 </div>
 <nav>
     <ul>
