--- a/style/style.css
+++ b/style/style.css
@@ -141,7 +141,7 @@
     font-size: larger;
   }
   #formDes {
-    height: auto;
+    height: 100%;
     width: auto;
     grid-column: 2/3;
     grid-row: 1/2;
