--- a/partials/header.html
+++ b/partials/header.html
@@ -4,8 +4,8 @@
 </div>
 <nav>
     <ul>
-        <li><a href="../entries.html">Entries</a></li>
-        <li><a href="../message.html">Affirmations</a></li>
-        <li><a href="../tracker.html">Mood Tracker</a></li>
+        <li><a href="https://peanut1019.github.io/WDD330Project/entries.html">Entries</a></li>
+        <li><a href="https://peanut1019.github.io/WDD330Project/message.html">Affirmations</a></li>
+        <li><a href="https://peanut1019.github.io/WDD330Project/tracker.html">Mood Tracker</a></li>
     </ul>
 </nav>
