--- a/partials/header.html
+++ b/partials/header.html
@@ -1,6 +1,6 @@
 <div class="logo">
-    <img src="https://peanut1019.github.io/WDD330Project//img/Mellow.png" alt="Mellow Yeller Logo"/>
-    <a href="https://peanut1019.github.io/WDD330Project//index.html"><h1>Mellow Yeller</h1></a>
+    <img src="https://peanut1019.github.io/WDD330Project/img/Mellow.png" alt="Mellow Yeller Logo"/>
+    <a href="https://peanut1019.github.io/WDD330Project/index.html"><h1>Mellow Yeller</h1></a>
 </div>
 <nav>
     <ul>
